// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing LoginForm Component is logging in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginForm
    alert={[Function]}
    loggingIn={true}
    onLogin={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": Array [
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 30,
              "paddingHorizontal": 30,
              "zIndex": 2,
            }
          }
        >
          <Logo
            size={150}
          />
          <Styled(Form)
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <Styled(Item)
              error={false}
              floatingLabel={true}
            >
              <Styled(Label)>
                <Styled(Text)
                  note={true}
                  style={
                    Object {
                      "color": "#4E4A47",
                    }
                  }
                >
                  HKU Portal UID
                </Styled(Text)>
              </Styled(Label)>
              <Styled(Input)
                autoCapitalize="none"
                autoCorrect={false}
                keyboardType="ascii-capable"
                onChangeText={[Function]}
              />
            </Styled(Item)>
            <Styled(Item)
              error={false}
              floatingLabel={true}
            >
              <Styled(Label)>
                <Styled(Text)
                  note={true}
                  style={
                    Object {
                      "color": "#4E4A47",
                    }
                  }
                >
                  HKU Portal PIN
                </Styled(Text)>
              </Styled(Label)>
              <Styled(Input)
                onChangeText={[Function]}
                secureTextEntry={true}
              />
            </Styled(Item)>
            <Styled(Item)
              style={
                Object {
                  "borderBottomWidth": 0,
                  "marginTop": 15,
                }
              }
            >
              <Styled(Label)>
                <Styled(Text)
                  style={
                    Array [
                      Object {
                        "fontSize": 10,
                        "fontStyle": "italic",
                      },
                      Object {
                        "color": "#4E4A47",
                      },
                    ]
                  }
                >
                  **Your PIN will NOT be saved in our database
                </Styled(Text)>
              </Styled(Label)>
            </Styled(Item)>
          </Styled(Form)>
          <Styled(Spinner)
            inverse={true}
            size="small"
            style={
              Object {
                "height": 45,
                "marginTop": 30,
              }
            }
          />
        </Styled(ViewNB)>,
        <Backdrop
          height={1334}
          style={
            Object {
              "zIndex": 1,
            }
          }
          width={750}
        />,
      ],
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo
              size={150}
            />,
            <Styled(Form)
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal UID
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="ascii-capable"
                  onChangeText={[Function]}
                />
              </Styled(Item)>
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal PIN
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  onChangeText={[Function]}
                  secureTextEntry={true}
                />
              </Styled(Item)>
              <Styled(Item)
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  }
                }
              >
                <Styled(Label)>
                  <Styled(Text)
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ]
                    }
                  >
                    **Your PIN will NOT be saved in our database
                  </Styled(Text)>
                </Styled(Label)>
              </Styled(Item)>
            </Styled(Form)>,
            <Styled(Spinner)
              inverse={true}
              size="small"
              style={
                Object {
                  "height": 45,
                  "marginTop": 30,
                }
              }
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "paddingBottom": 30,
            "paddingHorizontal": 30,
            "zIndex": 2,
          },
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "size": 150,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal UID
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    autoCapitalize="none"
                    autoCorrect={false}
                    keyboardType="ascii-capable"
                    onChangeText={[Function]}
                  />
                </Styled(Item)>,
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal PIN
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    onChangeText={[Function]}
                    secureTextEntry={true}
                  />
                </Styled(Item)>,
                <Styled(Item)
                  style={
                    Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    }
                  }
                >
                  <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>
                </Styled(Item)>,
              ],
              "style": Object {
                "width": "100%",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>
                    </Styled(Label)>,
                    <Styled(Input)
                      autoCapitalize="none"
                      autoCorrect={false}
                      keyboardType="ascii-capable"
                      onChangeText={[Function]}
                    />,
                    false,
                  ],
                  "error": false,
                  "floatingLabel": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "HKU Portal UID",
                        "note": true,
                        "style": Object {
                          "color": "#4E4A47",
                        },
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "HKU Portal UID",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "autoCapitalize": "none",
                      "autoCorrect": false,
                      "keyboardType": "ascii-capable",
                      "onChangeText": [Function],
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  false,
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>
                    </Styled(Label)>,
                    <Styled(Input)
                      onChangeText={[Function]}
                      secureTextEntry={true}
                    />,
                    false,
                  ],
                  "error": false,
                  "floatingLabel": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "HKU Portal PIN",
                        "note": true,
                        "style": Object {
                          "color": "#4E4A47",
                        },
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "HKU Portal PIN",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "onChangeText": [Function],
                      "secureTextEntry": true,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  false,
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>,
                  "style": Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  },
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "**Your PIN will NOT be saved in our database",
                      "style": Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ],
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": "**Your PIN will NOT be saved in our database",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "inverse": true,
              "size": "small",
              "style": Object {
                "height": 45,
                "marginTop": 30,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "height": 1334,
          "style": Object {
            "zIndex": 1,
          },
          "width": 750,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": Array [
          <Styled(ViewNB)
            style={
              Object {
                "alignItems": "center",
                "paddingBottom": 30,
                "paddingHorizontal": 30,
                "zIndex": 2,
              }
            }
          >
            <Logo
              size={150}
            />
            <Styled(Form)
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal UID
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="ascii-capable"
                  onChangeText={[Function]}
                />
              </Styled(Item)>
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal PIN
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  onChangeText={[Function]}
                  secureTextEntry={true}
                />
              </Styled(Item)>
              <Styled(Item)
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  }
                }
              >
                <Styled(Label)>
                  <Styled(Text)
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ]
                    }
                  >
                    **Your PIN will NOT be saved in our database
                  </Styled(Text)>
                </Styled(Label)>
              </Styled(Item)>
            </Styled(Form)>
            <Styled(Spinner)
              inverse={true}
              size="small"
              style={
                Object {
                  "height": 45,
                  "marginTop": 30,
                }
              }
            />
          </Styled(ViewNB)>,
          <Backdrop
            height={1334}
            style={
              Object {
                "zIndex": 1,
              }
            }
            width={750}
          />,
        ],
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo
                size={150}
              />,
              <Styled(Form)
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal UID
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    autoCapitalize="none"
                    autoCorrect={false}
                    keyboardType="ascii-capable"
                    onChangeText={[Function]}
                  />
                </Styled(Item)>
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal PIN
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    onChangeText={[Function]}
                    secureTextEntry={true}
                  />
                </Styled(Item)>
                <Styled(Item)
                  style={
                    Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    }
                  }
                >
                  <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>
                </Styled(Item)>
              </Styled(Form)>,
              <Styled(Spinner)
                inverse={true}
                size="small"
                style={
                  Object {
                    "height": 45,
                    "marginTop": 30,
                  }
                }
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "paddingBottom": 30,
              "paddingHorizontal": 30,
              "zIndex": 2,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "size": 150,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Item)
                    error={false}
                    floatingLabel={true}
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>
                    </Styled(Label)>
                    <Styled(Input)
                      autoCapitalize="none"
                      autoCorrect={false}
                      keyboardType="ascii-capable"
                      onChangeText={[Function]}
                    />
                  </Styled(Item)>,
                  <Styled(Item)
                    error={false}
                    floatingLabel={true}
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>
                    </Styled(Label)>
                    <Styled(Input)
                      onChangeText={[Function]}
                      secureTextEntry={true}
                    />
                  </Styled(Item)>,
                  <Styled(Item)
                    style={
                      Object {
                        "borderBottomWidth": 0,
                        "marginTop": 15,
                      }
                    }
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>
                    </Styled(Label)>
                  </Styled(Item)>,
                ],
                "style": Object {
                  "width": "100%",
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Styled(Label)>
                        <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal UID
                        </Styled(Text)>
                      </Styled(Label)>,
                      <Styled(Input)
                        autoCapitalize="none"
                        autoCorrect={false}
                        keyboardType="ascii-capable"
                        onChangeText={[Function]}
                      />,
                      false,
                    ],
                    "error": false,
                    "floatingLabel": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal UID
                        </Styled(Text)>,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "HKU Portal UID",
                          "note": true,
                          "style": Object {
                            "color": "#4E4A47",
                          },
                          "virtual": undefined,
                        },
                        "ref": null,
                        "rendered": "HKU Portal UID",
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "autoCapitalize": "none",
                        "autoCorrect": false,
                        "keyboardType": "ascii-capable",
                        "onChangeText": [Function],
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    false,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Styled(Label)>
                        <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal PIN
                        </Styled(Text)>
                      </Styled(Label)>,
                      <Styled(Input)
                        onChangeText={[Function]}
                        secureTextEntry={true}
                      />,
                      false,
                    ],
                    "error": false,
                    "floatingLabel": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal PIN
                        </Styled(Text)>,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "HKU Portal PIN",
                          "note": true,
                          "style": Object {
                            "color": "#4E4A47",
                          },
                          "virtual": undefined,
                        },
                        "ref": null,
                        "rendered": "HKU Portal PIN",
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "onChangeText": [Function],
                        "secureTextEntry": true,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    false,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Label)>
                      <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>
                    </Styled(Label)>,
                    "style": Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    },
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "**Your PIN will NOT be saved in our database",
                        "style": Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ],
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "**Your PIN will NOT be saved in our database",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "inverse": true,
                "size": "small",
                "style": Object {
                  "height": 45,
                  "marginTop": 30,
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "height": 1334,
            "style": Object {
              "zIndex": 1,
            },
            "width": 750,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing LoginForm Component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginForm
    alert={[Function]}
    onLogin={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": Array [
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 30,
              "paddingHorizontal": 30,
              "zIndex": 2,
            }
          }
        >
          <Logo
            size={150}
          />
          <Styled(Form)
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <Styled(Item)
              error={false}
              floatingLabel={true}
            >
              <Styled(Label)>
                <Styled(Text)
                  note={true}
                  style={
                    Object {
                      "color": "#4E4A47",
                    }
                  }
                >
                  HKU Portal UID
                </Styled(Text)>
              </Styled(Label)>
              <Styled(Input)
                autoCapitalize="none"
                autoCorrect={false}
                keyboardType="ascii-capable"
                onChangeText={[Function]}
              />
            </Styled(Item)>
            <Styled(Item)
              error={false}
              floatingLabel={true}
            >
              <Styled(Label)>
                <Styled(Text)
                  note={true}
                  style={
                    Object {
                      "color": "#4E4A47",
                    }
                  }
                >
                  HKU Portal PIN
                </Styled(Text)>
              </Styled(Label)>
              <Styled(Input)
                onChangeText={[Function]}
                secureTextEntry={true}
              />
            </Styled(Item)>
            <Styled(Item)
              style={
                Object {
                  "borderBottomWidth": 0,
                  "marginTop": 15,
                }
              }
            >
              <Styled(Label)>
                <Styled(Text)
                  style={
                    Array [
                      Object {
                        "fontSize": 10,
                        "fontStyle": "italic",
                      },
                      Object {
                        "color": "#4E4A47",
                      },
                    ]
                  }
                >
                  **Your PIN will NOT be saved in our database
                </Styled(Text)>
              </Styled(Label)>
            </Styled(Item)>
          </Styled(Form)>
          <Styled(Button)
            block={true}
            dark={true}
            iconRight={true}
            onPress={[Function]}
            style={
              Object {
                "height": 45,
                "marginTop": 30,
              }
            }
            transparent={true}
          >
            <Styled(Text)>
              Login
            </Styled(Text)>
            <Styled(Icon)
              name="login"
              type="AntDesign"
            />
          </Styled(Button)>
        </Styled(ViewNB)>,
        <Backdrop
          height={1334}
          style={
            Object {
              "zIndex": 1,
            }
          }
          width={750}
        />,
      ],
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo
              size={150}
            />,
            <Styled(Form)
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal UID
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="ascii-capable"
                  onChangeText={[Function]}
                />
              </Styled(Item)>
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal PIN
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  onChangeText={[Function]}
                  secureTextEntry={true}
                />
              </Styled(Item)>
              <Styled(Item)
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  }
                }
              >
                <Styled(Label)>
                  <Styled(Text)
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ]
                    }
                  >
                    **Your PIN will NOT be saved in our database
                  </Styled(Text)>
                </Styled(Label)>
              </Styled(Item)>
            </Styled(Form)>,
            <Styled(Button)
              block={true}
              dark={true}
              iconRight={true}
              onPress={[Function]}
              style={
                Object {
                  "height": 45,
                  "marginTop": 30,
                }
              }
              transparent={true}
            >
              <Styled(Text)>
                Login
              </Styled(Text)>
              <Styled(Icon)
                name="login"
                type="AntDesign"
              />
            </Styled(Button)>,
          ],
          "style": Object {
            "alignItems": "center",
            "paddingBottom": 30,
            "paddingHorizontal": 30,
            "zIndex": 2,
          },
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "size": 150,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal UID
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    autoCapitalize="none"
                    autoCorrect={false}
                    keyboardType="ascii-capable"
                    onChangeText={[Function]}
                  />
                </Styled(Item)>,
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal PIN
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    onChangeText={[Function]}
                    secureTextEntry={true}
                  />
                </Styled(Item)>,
                <Styled(Item)
                  style={
                    Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    }
                  }
                >
                  <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>
                </Styled(Item)>,
              ],
              "style": Object {
                "width": "100%",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>
                    </Styled(Label)>,
                    <Styled(Input)
                      autoCapitalize="none"
                      autoCorrect={false}
                      keyboardType="ascii-capable"
                      onChangeText={[Function]}
                    />,
                    false,
                  ],
                  "error": false,
                  "floatingLabel": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "HKU Portal UID",
                        "note": true,
                        "style": Object {
                          "color": "#4E4A47",
                        },
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "HKU Portal UID",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "autoCapitalize": "none",
                      "autoCorrect": false,
                      "keyboardType": "ascii-capable",
                      "onChangeText": [Function],
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  false,
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>
                    </Styled(Label)>,
                    <Styled(Input)
                      onChangeText={[Function]}
                      secureTextEntry={true}
                    />,
                    false,
                  ],
                  "error": false,
                  "floatingLabel": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "HKU Portal PIN",
                        "note": true,
                        "style": Object {
                          "color": "#4E4A47",
                        },
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "HKU Portal PIN",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "onChangeText": [Function],
                      "secureTextEntry": true,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  false,
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>,
                  "style": Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  },
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "**Your PIN will NOT be saved in our database",
                      "style": Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ],
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": "**Your PIN will NOT be saved in our database",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "block": true,
              "children": Array [
                <Styled(Text)>
                  Login
                </Styled(Text)>,
                <Styled(Icon)
                  name="login"
                  type="AntDesign"
                />,
              ],
              "dark": true,
              "disabled": undefined,
              "iconRight": true,
              "onPress": [Function],
              "style": Object {
                "height": 45,
                "marginTop": 30,
              },
              "transparent": true,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Login",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": "Login",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "login",
                  "type": "AntDesign",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "height": 1334,
          "style": Object {
            "zIndex": 1,
          },
          "width": 750,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": Array [
          <Styled(ViewNB)
            style={
              Object {
                "alignItems": "center",
                "paddingBottom": 30,
                "paddingHorizontal": 30,
                "zIndex": 2,
              }
            }
          >
            <Logo
              size={150}
            />
            <Styled(Form)
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal UID
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="ascii-capable"
                  onChangeText={[Function]}
                />
              </Styled(Item)>
              <Styled(Item)
                error={false}
                floatingLabel={true}
              >
                <Styled(Label)>
                  <Styled(Text)
                    note={true}
                    style={
                      Object {
                        "color": "#4E4A47",
                      }
                    }
                  >
                    HKU Portal PIN
                  </Styled(Text)>
                </Styled(Label)>
                <Styled(Input)
                  onChangeText={[Function]}
                  secureTextEntry={true}
                />
              </Styled(Item)>
              <Styled(Item)
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "marginTop": 15,
                  }
                }
              >
                <Styled(Label)>
                  <Styled(Text)
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "fontStyle": "italic",
                        },
                        Object {
                          "color": "#4E4A47",
                        },
                      ]
                    }
                  >
                    **Your PIN will NOT be saved in our database
                  </Styled(Text)>
                </Styled(Label)>
              </Styled(Item)>
            </Styled(Form)>
            <Styled(Button)
              block={true}
              dark={true}
              iconRight={true}
              onPress={[Function]}
              style={
                Object {
                  "height": 45,
                  "marginTop": 30,
                }
              }
              transparent={true}
            >
              <Styled(Text)>
                Login
              </Styled(Text)>
              <Styled(Icon)
                name="login"
                type="AntDesign"
              />
            </Styled(Button)>
          </Styled(ViewNB)>,
          <Backdrop
            height={1334}
            style={
              Object {
                "zIndex": 1,
              }
            }
            width={750}
          />,
        ],
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo
                size={150}
              />,
              <Styled(Form)
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal UID
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    autoCapitalize="none"
                    autoCorrect={false}
                    keyboardType="ascii-capable"
                    onChangeText={[Function]}
                  />
                </Styled(Item)>
                <Styled(Item)
                  error={false}
                  floatingLabel={true}
                >
                  <Styled(Label)>
                    <Styled(Text)
                      note={true}
                      style={
                        Object {
                          "color": "#4E4A47",
                        }
                      }
                    >
                      HKU Portal PIN
                    </Styled(Text)>
                  </Styled(Label)>
                  <Styled(Input)
                    onChangeText={[Function]}
                    secureTextEntry={true}
                  />
                </Styled(Item)>
                <Styled(Item)
                  style={
                    Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    }
                  }
                >
                  <Styled(Label)>
                    <Styled(Text)
                      style={
                        Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ]
                      }
                    >
                      **Your PIN will NOT be saved in our database
                    </Styled(Text)>
                  </Styled(Label)>
                </Styled(Item)>
              </Styled(Form)>,
              <Styled(Button)
                block={true}
                dark={true}
                iconRight={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 45,
                    "marginTop": 30,
                  }
                }
                transparent={true}
              >
                <Styled(Text)>
                  Login
                </Styled(Text)>
                <Styled(Icon)
                  name="login"
                  type="AntDesign"
                />
              </Styled(Button)>,
            ],
            "style": Object {
              "alignItems": "center",
              "paddingBottom": 30,
              "paddingHorizontal": 30,
              "zIndex": 2,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "size": 150,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Item)
                    error={false}
                    floatingLabel={true}
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal UID
                      </Styled(Text)>
                    </Styled(Label)>
                    <Styled(Input)
                      autoCapitalize="none"
                      autoCorrect={false}
                      keyboardType="ascii-capable"
                      onChangeText={[Function]}
                    />
                  </Styled(Item)>,
                  <Styled(Item)
                    error={false}
                    floatingLabel={true}
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        note={true}
                        style={
                          Object {
                            "color": "#4E4A47",
                          }
                        }
                      >
                        HKU Portal PIN
                      </Styled(Text)>
                    </Styled(Label)>
                    <Styled(Input)
                      onChangeText={[Function]}
                      secureTextEntry={true}
                    />
                  </Styled(Item)>,
                  <Styled(Item)
                    style={
                      Object {
                        "borderBottomWidth": 0,
                        "marginTop": 15,
                      }
                    }
                  >
                    <Styled(Label)>
                      <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>
                    </Styled(Label)>
                  </Styled(Item)>,
                ],
                "style": Object {
                  "width": "100%",
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Styled(Label)>
                        <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal UID
                        </Styled(Text)>
                      </Styled(Label)>,
                      <Styled(Input)
                        autoCapitalize="none"
                        autoCorrect={false}
                        keyboardType="ascii-capable"
                        onChangeText={[Function]}
                      />,
                      false,
                    ],
                    "error": false,
                    "floatingLabel": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal UID
                        </Styled(Text)>,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "HKU Portal UID",
                          "note": true,
                          "style": Object {
                            "color": "#4E4A47",
                          },
                          "virtual": undefined,
                        },
                        "ref": null,
                        "rendered": "HKU Portal UID",
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "autoCapitalize": "none",
                        "autoCorrect": false,
                        "keyboardType": "ascii-capable",
                        "onChangeText": [Function],
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    false,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Styled(Label)>
                        <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal PIN
                        </Styled(Text)>
                      </Styled(Label)>,
                      <Styled(Input)
                        onChangeText={[Function]}
                        secureTextEntry={true}
                      />,
                      false,
                    ],
                    "error": false,
                    "floatingLabel": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Styled(Text)
                          note={true}
                          style={
                            Object {
                              "color": "#4E4A47",
                            }
                          }
                        >
                          HKU Portal PIN
                        </Styled(Text)>,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "HKU Portal PIN",
                          "note": true,
                          "style": Object {
                            "color": "#4E4A47",
                          },
                          "virtual": undefined,
                        },
                        "ref": null,
                        "rendered": "HKU Portal PIN",
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "onChangeText": [Function],
                        "secureTextEntry": true,
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    false,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Label)>
                      <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>
                    </Styled(Label)>,
                    "style": Object {
                      "borderBottomWidth": 0,
                      "marginTop": 15,
                    },
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Styled(Text)
                        style={
                          Array [
                            Object {
                              "fontSize": 10,
                              "fontStyle": "italic",
                            },
                            Object {
                              "color": "#4E4A47",
                            },
                          ]
                        }
                      >
                        **Your PIN will NOT be saved in our database
                      </Styled(Text)>,
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "**Your PIN will NOT be saved in our database",
                        "style": Array [
                          Object {
                            "fontSize": 10,
                            "fontStyle": "italic",
                          },
                          Object {
                            "color": "#4E4A47",
                          },
                        ],
                        "virtual": undefined,
                      },
                      "ref": null,
                      "rendered": "**Your PIN will NOT be saved in our database",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "block": true,
                "children": Array [
                  <Styled(Text)>
                    Login
                  </Styled(Text)>,
                  <Styled(Icon)
                    name="login"
                    type="AntDesign"
                  />,
                ],
                "dark": true,
                "disabled": undefined,
                "iconRight": true,
                "onPress": [Function],
                "style": Object {
                  "height": 45,
                  "marginTop": 30,
                },
                "transparent": true,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Login",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": "Login",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "login",
                    "type": "AntDesign",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "height": 1334,
            "style": Object {
              "zIndex": 1,
            },
            "width": 750,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
